# QCV

./: .gitignore  CMakeLists.txt  main.cpp
QAlgo/: QAlgo.h  cv_GammaCorrection.cpp  cv_equalize_hist.cpp  cv_gaussian_filter.cpp  cv_mosaic.cpp
common/: log.h
test/: test.cpp  test.h  test_cv_GammaCorrection.cpp  test_cv_ImageDenoising.cpp  test_cv_Laplacian.cpp  test_cv_equalize_hist.cpp  test_cv_gaussian_filter.cpp  test_cv_mosaic.cpp
